webappfiles/webapp-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: 269412902658.dkr.ecr.us-east-1.amazonaws.com/clo835_assignment2_repository_webapp:v1.1
          ports:
            - containerPort: 8080
