webappfiles/webapp-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app-pod
  namespace: webapp
spec:
  containers:
    - name: web-app
      image: 269412902658.dkr.ecr.us-east-1.amazonaws.com/clo835_assignment2_repository_webapp:v1.1
      ports:
        - containerPort: 8080
