webappfiles/webapp-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc-v2
  labels:
    app: web-app
    version: v2
spec:
  selector:
    app: web-app
    version: v2 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001 
  type: NodePort
