webappfiles/webapp-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
    - host: 54.84.29.106
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: web-app-svc
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web-app-svc-v2
                port:
                  number: 8080
